[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "primaschema"
authors = [
    {name = "Bede Constantinides", email="bedeabc@gmail.com"},
    {name = "Chris Kent", email="chrisgkent@protonmail.com"},
    {name = "Peter van Heusden", email="pvh@sanbi.ac.za"},
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["genomics"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "altair>=5.3.0",
    "biopython>=1.80",
    "cyclopts>=4.3.0",
    "defopt==6.4.0",
    "httpx>=0.27.0",
    "jsonschema",
    "linkml>=1.9.4",
    "natsort>=8.4.0",
    "pandas>=1.5.3",
    "platformdirs>=4.2.2",
    "primalbedtools>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.2",
    "vl-convert-python>=1.6.0",
]

[project.scripts]
primaschema = "primaschema.cli:main"

[project.urls]
Home = "https://github.com/pha4ge/primaschema"

[project.optional-dependencies]
dev = [
    "pytest",
    "pre-commit",
    "flit",
    "ruff>=0.14.6"
]

[tool.flit.external-data]
directory = "test"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211:linkml.generators.*",
]

[tool.ruff.format]
exclude = ["info.py"]