[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "primaschema"
version = "0.1.0"
description = "Metadata tooling for pha4ge primerschemes"
authors = [
    {name = "Bede Constantinides", email="bedeabc@gmail.com"},
    {name = "Chris Kent", email="chrisgkent@protonmail.com"},
    {name = "Peter van Heusden", email="pvh@sanbi.ac.za"},
]
readme = "README.md"
requires-python = ">=3.12"
keywords = ["genomics"]
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "altair>=5.3.0",
    "cyclopts>=4.10.0",
    "dnaio>=1.2.4",
    "jsonschema",
    "linkml>=1.9.4",
    "natsort>=8.4.0",
    "pandas>=1.5.3",
    "primalbedtools>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.1",
    "pyyaml>=6.0.2",
    "vl-convert-python>=1.6.0",
    "plotly>=6.6.0",
]

[project.scripts]
primaschema = "primaschema.cli:main"

[project.urls]
Home = "https://github.com/pha4ge/primaschema"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "flit",
    "ruff>=0.14.6",
]
docs = [
    "griffe-pydantic>=1.1.0",
    "cyclopts[mkdocs]>=4.10.0",
        "mkdocstrings-python>=1.16.10",
        "mkdocs>=1.6.1,<2",
        "mkdocstrings[python]>=0.29.1,<0.30",
        "mkdocs-material>=9.6.14,<10",
]

[tool.pytest.ini_options]
markers = [
    "network: tests that require network access",
]
addopts = "-m 'not network'"
filterwarnings = [
    "ignore::pydantic.warnings.PydanticDeprecatedSince211:linkml.generators.*",
]

[tool.ruff]
exclude = ["src/primaschema/schema/info.py"]
